--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-}
 .bg-black {
   background-color: black;
   color: white;
   font-family: sans-serif;
+}
+.head {
+  background-image: url(https://www.revistaturbo.com/sites/default/files/styles/600x338/public/mazdacx5.jpg?itok=vnVtpmcS);
+  width: 100%;
+  height: 340px;
 }
 .image-mazda {
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCs5AbvXvwdrjL2dKDWqie74qf3AsY4ZX5hA&usqp=CAU);
